--- a/case1/sp_layout.css
+++ b/case1/sp_layout.css
@@ -73,7 +73,7 @@ nav.horizontal li{
 
 
 /* Topics Styles */
-li > ul#topics{
+ul#topics li{
    display: block;
    width: 20%;
    float: left;
@@ -84,12 +84,12 @@ ul#topics li:first-of-type{
    margin-left: 7.75%;
 }
 ul#topics li:last-of-type{
-   margin-left: 7.75%;
+   margin-right: 7.75%;
 }
-ul > li > img{
+ul#topics img{
    display: block;
    width: 50%;
-   margin-left: auto;
+   margin-right: auto;
    margin-left: auto;
 }
 
@@ -103,13 +103,34 @@ hr{
 
 
 /* Customer Comment Styles */
-ul#comments li{
+
+ul#comments{
+   width: 75%;
+   margin-right: auto;
+   margin-left: auto;
+   margin-top: 40px;
+   margin-bottom: 40px;
+ }
+ ul#comments li{
    width: 50%;
    display: block;
    margin-bottom: 30px;
-}
-
-
-/* Footer Styles */
-
-
+   float: left;
+ }
+ ul#comments img{
+   float: left;
+   display: block;
+   width: 20%;
+   margin-left: 5%;
+   margin-right: 5%;
+ }
+ ul#comments p{
+    float: left;
+    width: 70%;
+ }
+ 
+ /* Footer Styles */
+ 
+ footer{
+   clear: both;
+ }
